--- a/src/main.scss
+++ b/src/main.scss
@@ -1,9 +1,12 @@
-// https://colorhunt.co/palette/5f71616d8b74efead8d0c9c0
+// Green - https://colorhunt.co/palette/5f71616d8b74efead8d0c9c0
+// Blue - https://coolors.co/palette/353535-3c6e71-ffffff-d9d9d9-284b63
 @import '../node_modules/bootstrap/scss/functions';
-$primary: #6D8B74;
-$secondary: #6D8B74;
-$tertiary: #D0C9C0;
-$light: #EFEAD8;
+
+/* Overides */
+$primary: #3C6E71;
+$secondary: #353535;
+$tertiary: #D9D9D9;
+$light: #FFFFFF;
 
 $border-width: 3px;
 
@@ -11,7 +14,6 @@ $border-width: 3px;
 
 header #header-name {
     font-size: 4rem;
-
 }
 
 header .fas {
@@ -19,14 +21,20 @@ header .fas {
     //filter: drop-shadow(3px 3px 0 $light);
 }
 
+.navbar .nav-link.active {
+    background-color: $secondary;
+}
+
 .portfolio-item {
     transition: box-shadow 0.3s ease;
-
 }
 
 .portfolio-item:hover {
     box-shadow: 5px 5px 0 $secondary;
+}
 
+#about .btn-outline-light {
+    padding: 2rem 4rem;    
 }
 
 /* CONTACT */
@@ -38,9 +46,6 @@ header .fas {
     border-right: 0;
 }
 
-
-
-
 .form-control:focus {
     box-shadow: none;
 }
@@ -49,11 +54,3 @@ header .fas {
     height: 70px;
 
 }
-
-//img {
-//   transition: transform 0.2s ease-in-out;
-//}
-//
-//img:hover {
-//   transform: scale(101%); 
-//}
