--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -8,14 +8,12 @@
     </h1>
     <div>
         <p class="p-6">
-            I'm a web developer striving to produce quality software, assist
-            small bussinesses, and create application accessible for all to use.
-
-
+            A web developer striving to produce quality software, assist small
+            bussinesses, and create application accessible for all to use.
             <br />
             <br />
-             Please take a look around and check out the projects I've made. If
-            you have any question, or want to reach out, please don't hesistate!
+             Please take a look around and check out the projects. If you have
+            any questions, or want to reach out, please don't hesistate!
         </p>
     </div>
 </div>
