--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
     </head>
     <body>
         <Nav />
-        <main>
+        <main class="max-w-2xl mx-auto px-2 md:px-0">
             <slot />
         </main>
     </body>
