--- a/src/pages/[project].astro
+++ b/src/pages/[project].astro
@@ -1,9 +1,14 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import projectsData from "../data/projects.json";
-
 import { Image } from "astro:assets";
 import type { ImageMetadata } from "astro";
+import type { IconType } from "react-icons";
+
+import { SiBootstrap } from "react-icons/si";
+
+import Layout from "../layouts/Layout.astro";
+import projectsData from "../data/projects.ts";
+
+import { siBootstrap } from "simple-icons/icons";
 
 export function getStaticPaths() {
     return projectsData;
@@ -22,26 +27,54 @@ projectsData.forEach(async (data) => {
 });
 ---
 
-<Layout title={project}>
+<Layout title={title}>
     <div class="py-4">
         <div class="mb-4">
-            <a href="/#projects" transition:name="#projects"
-                >← Back to Project</a
+            <a
+                class="px-4 py-2 border border-black hover:bg-black hover:text-white transition-colors ease-in"
+                href="/#projects"
+                transition:name="#projects">← Back to Projects</a
             >
         </div>
-        <h1 class="text-2xl font-bold mb-4">{title}</h1>
-        <Image src={imgMap.get(project) as ImageMetadata} alt={desc} />
+        <h1 transition:name="title" class="text-2xl font-bold mb-4">
+            {title}
+        </h1>
+        <Image
+            transition:name="image"
+            src={imgMap.get(project) as ImageMetadata}
+            alt={desc}
+            class="border border-black mb-4"
+        />
         <div>
-            <p>
-                Technologies:
+            <h2 class="text-lg font-semibold">Technologies</h2>
+            <div class="flex gap-6 py-4">
                 {
-                    technologies.map((tech) => {
-                        return <span>{tech}</span>;
-                    })
+                    technologies.map((Icon: IconType) => (
+                        <Icon
+                            className="fill-slate-500"
+                            title={Icon.name}
+                            size={48}
+                        />
+                    ))
                 }
-            </p>
-            <p>Links: {link} {github}</p>
-            <p>About: {about}</p>
+            </div>
+            <h2 class="text-lg font-semibold">Links</h2>
+            <div class="py-4">
+                <a
+                    href={link}
+                    target="_blank"
+                    class="px-4 py-2 border border-black hover:bg-black hover:text-white transition-colors ease-in"
+                    >Website</a
+                >
+                <a
+                    href={github}
+                    target="_blank"
+                    class="px-4 py-2 border border-black hover:bg-black hover:text-white transition-colors ease-in"
+                    >Github</a
+                >
+            </div>
+            <h2 class="text-lg font-semibold">About</h2>
+            <p class="py-4">{about}</p>
         </div>
     </div>
 </Layout>
