--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 import Landing from "../components/Landing.astro";
 import Projects from "../components/Projects.astro";
+import Technologies from "../components/Technologies.astro";
 ---
 
 <Layout title="Welcome to Astro.">
     <Landing />
     <Projects />
+    <Technologies />
 </Layout>
