refactor: change the project pages to use the Icon component

--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -2,12 +2,12 @@
 
 ---
 
-<div class="mx-12 flex flex-col justify-center items-center">
-    <h1 class="text-xl">
+<div class="flex flex-col justify-center items-center">
+    <h1 class="text-4xl text-center">
         Welcome to the portfolio of <span class="font-bold">Ian Reimers</span>
     </h1>
-    <div>
-        <p class="p-6">
+    <div class="mx-12">
+        <p class="text-xl p-6">
             A web developer striving to produce quality software, assist small
             bussinesses, and create application accessible for all to use.
             <br />
