--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -34,7 +34,7 @@ import Icon from "../components/Icon.jsx";
         </div>
     </div>
     <div>
-        <h3 class="text-lg py-4">Frameworks/Bundlers/Libraries</h3>
+        <h3 class="text-xl py-4">Frameworks / DBs / Libraries / Etc.</h3>
         <div class="ms-10">
             <h4 class="mb-4 border-b border-b-black">DevOps</h4>
             <div class="mb-4 flex flex-wrap gap-10">
@@ -44,10 +44,11 @@ import Icon from "../components/Icon.jsx";
             </div>
             <h4 class="mb-4 border-b border-b-black">Frontend</h4>
             <div class="mb-4 flex flex-wrap gap-10">
-                <!-- c, java, haskell -->
+                <!-- react, nextjs, vite, webpack -->
                 <Icon title="react" />
                 <Icon title="nextjs" />
                 <Icon title="vite" />
+                <Icon title="astro" />
                 <Icon title="webpack" />
             </div>
             <h4 class="mb-4 border-b border-b-black">Backend</h4>
@@ -62,7 +63,7 @@ import Icon from "../components/Icon.jsx";
         </div>
     </div>
     <div>
-        <h3 class="text-lg py-4 mb-2">Development Environment</h3>
+        <h3 class="text-xl py-4 mb-2">Development Environment</h3>
         <div class="ms-10 flex flex-wrap gap-10">
             <!-- neovim, arch, i3, tmux, bash -->
             <Icon title="neovim" />
