--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -11,16 +11,11 @@ projectsData.forEach(async (data) => {
 
     imgMap.set(key, imgData as ImageMetadata);
 });
-//const { title, imgPath, desc } = data.props;
-//title={title}
-//imgPath={imgPath}
-//desc={desc}
-//link={project}
 ---
 
 <section id="projects">
     <h2 class="text-center text-4xl font-semibold mb-4">Projects</h2>
-    <div class="flex flex-wrap gap-2 justify-center items-center">
+    <div class="flex flex-wrap py-8 gap-2 justify-center items-center">
         {
             projectsData.map((data) => {
                 const { project } = data.params;
