--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -64,7 +64,7 @@ import Icon from "../components/Icon.jsx";
     </div>
     <div>
         <h3 class="text-xl py-4 mb-2">Development Environment</h3>
-        <div class="ms-10 flex flex-wrap gap-10">
+        <div class="ms-10 mb-8 flex flex-wrap gap-10">
             <!-- neovim, arch, i3, tmux, bash -->
             <Icon title="neovim" />
             <Icon title="arch" />
@@ -72,5 +72,11 @@ import Icon from "../components/Icon.jsx";
             <Icon title="tmux" />
             <Icon title="bash" />
         </div>
+        <a
+            href="https://github.com/cretlo/.dotfiles"
+            target="_blank"
+            class="ms-10 px-4 py-2 border border-black hover:bg-slate-500 hover:text-white transition ease-in"
+            >Checkout The Dotfiles</a
+        >
     </div>
 </section>
