--- a/src/pages/[project].astro
+++ b/src/pages/[project].astro
@@ -1,31 +1,14 @@
 ---
 import { Image } from "astro:assets";
-import type { ImageMetadata } from "astro";
-import type { IconType } from "react-icons";
 import Icon from "../components/Icon";
-
-import { SiBootstrap } from "react-icons/si";
-
 import Layout from "../layouts/Layout.astro";
 import projectsData from "../data/projects.ts";
-
-import { siBootstrap } from "simple-icons/icons";
 
 export function getStaticPaths() {
     return projectsData;
 }
 
-const { project } = Astro.params;
-const { title, desc, technologies, about, link, github } = Astro.props;
-
-// Map used for lookup of specific page ImageMetadata to render in astro Image component
-const imgMap = new Map<string, ImageMetadata>();
-projectsData.forEach(async (data) => {
-    const key = data.params.project as string;
-    const imgData = import(data.props.imgPath) as unknown;
-
-    imgMap.set(key, imgData as ImageMetadata);
-});
+const { title, desc, technologies, about, imgData, link, github } = Astro.props;
 ---
 
 <Layout title={title}>
@@ -42,7 +25,7 @@ projectsData.forEach(async (data) => {
         </h1>
         <Image
             transition:name="image"
-            src={imgMap.get(project) as ImageMetadata}
+            src={imgData}
             alt={desc}
             class="border border-black mb-4"
         />
@@ -64,12 +47,17 @@ projectsData.forEach(async (data) => {
             </div>
             <h2 class="text-lg font-semibold">Links</h2>
             <div class="py-4">
-                <a
-                    href={link}
-                    target="_blank"
-                    class="px-4 py-2 border border-black hover:bg-slate-500 hover:text-white transition-colors ease-in"
-                    >Website</a
-                >
+                {
+                    link && (
+                        <a
+                            href={link}
+                            target="_blank"
+                            class="px-4 py-2 me-4 border border-black hover:bg-slate-500 hover:text-white transition-colors ease-in"
+                        >
+                            Website
+                        </a>
+                    )
+                }
                 <a
                     href={github}
                     target="_blank"
