--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from "../layouts/Layout.astro";
 import Landing from "../components/Landing.astro";
 import Projects from "../components/Projects.astro";
 import Technologies from "../components/Technologies.astro";
+import Footer from "../components/Footer.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Welcome to Ian Reimers Portfolio">
     <Landing />
     <Projects />
     <Technologies />
+    <Footer />
 </Layout>
