style: add logo, mobile menu, icons, and adjust css margins

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,9 @@
 import Icon from "./Icon";
 ---
 
-<footer class="py-12 flex justify-center items-center">
+<footer class="flex items-center justify-center py-12">
     <h5 class="ms-auto">Copyright Ian Reimers</h5>
-    <div class="flex ms-auto">
+    <div class="ms-auto flex">
         <a href="https://github.com/cretlo" target="_blank"
             ><Icon title="github" size={28} /></a
         >
