--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -2,18 +2,22 @@
 
 ---
 
-<div class="flex flex-col justify-center items-center">
-    <h1 class="text-4xl text-center">
-        Welcome to the portfolio of <span class="font-bold">Ian Reimers</span>
+<div class="mb-12 flex flex-col items-center justify-center">
+    <h1
+        class="mb-12 text-center text-5xl font-extrabold leading-tight tracking-tighter md:text-6xl"
+    >
+        Welcome to the portfolio of <span class="text-teal-700"
+            >Ian Reimers</span
+        >
     </h1>
-    <div class="mx-12">
-        <p class="text-xl p-6">
+    <div>
+        <p class="text-xl text-gray-600">
             A web developer striving to produce quality software, assist small
-            bussinesses, and create application accessible for all to use.
+            bussinesses, and create applications accessible for all to use.
             <br />
             <br />
-             Please take a look around and check out the projects. If you have
-            any questions, or want to reach out, please don't hesistate!
+             Take a look around and check out the projects. If you have any
+            questions, or want to reach out, please don't hesitate!
         </p>
     </div>
 </div>
