--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -3,9 +3,9 @@ import ProjectCard from "./ProjectCard.astro";
 import projectsData from "../data/projects.ts";
 ---
 
-<section id="projects">
-    <h2 class="text-center text-4xl font-semibold mb-4">Projects</h2>
-    <div class="flex flex-wrap py-8 gap-2 justify-center items-center">
+<section id="projects" class="mb-12">
+    <h2 class="mb-10 text-center text-4xl font-bold">Projects</h2>
+    <div class="flex flex-wrap items-center justify-center gap-y-10 sm:gap-x-4">
         {
             projectsData.map((data) => {
                 const { project } = data.params;
