--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Nav from "../components/Nav";
+import Nav from "../components/Nav.astro";
 import { ViewTransitions } from "astro:transitions";
 
 interface Props {
@@ -22,7 +22,7 @@ const { title } = Astro.props;
     </head>
     <body>
         <Nav />
-        <main class="max-w-2xl mx-auto px-2 md:px-0">
+        <main class="mx-auto max-w-2xl px-2 md:px-0">
             <slot />
         </main>
     </body>
