--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,10 +1,15 @@
 ---
 import ProjectCard from "./ProjectCard.astro";
 import projectsData from "../data/projects.ts";
+import Icon from "./Icon";
 ---
 
 <section id="projects" class="mb-12">
     <h2 class="mb-10 text-center text-4xl font-bold">Projects</h2>
+    <div class="mb-10 flex flex-col items-center justify-center">
+        <p class="text-sm">Click to learn more.</p>
+        <Icon title="downArrow" size={20} />
+    </div>
     <div class="flex flex-wrap items-center justify-center gap-y-10 sm:gap-x-4">
         {
             projectsData.map((data) => {
