chore: remove debug statements and change <Icon /> to default class

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import Icon from "./Icon";
 ---
 
 <footer class="flex items-center justify-center py-12">
-    <h5 class="ms-auto">Copyright Ian Reimers</h5>
+    <h2 class="ms-auto text-sm">&#169; Copyright 2023 Ian Reimers</h2>
     <div class="ms-auto flex">
         <a href="https://github.com/cretlo" target="_blank"
             ><Icon title="github" size={28} /></a
