--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,23 +2,21 @@
 import { TbMenu2 } from "react-icons/tb";
 ---
 
-<nav id="#" class="mx-auto mb-8 flex max-w-2xl items-center justify-between border-b border-b-black px-2 py-5">
+<nav
+    id="#"
+    class="mx-auto mb-8 flex max-w-2xl items-center justify-between border-b border-b-black px-2 py-5"
+>
     <a href="/" class="z-50">
-        <!--
-        <Picture src={Logo} alt="Ian Reimers logo" />
-        -->
         <svg
             class="w-20"
-            viewBox="0 0 49.548969 23.801313"
+            viewBox="0 0 49.548973 23.801309"
             version="1.1"
             id="svg1"
             xmlns="http://www.w3.org/2000/svg"
-            <defs
-            id="defs1"
         >
             <title>Ian Reimers logo</title>
-            <rect x="322.2261" y="223.04205" width="53.213886" height="60.823296" id="rect12"></rect>
-            <g id="layer1" transform="translate(-71.184717,-55.007323)">
+            <defs id="defs1"></defs>
+            <g id="layer1" transform="translate(-71.184714,-55.007321)">
                 <rect
                     style="fill:#64748b;fill-opacity:1;stroke-width:0.264583"
                     id="rect11"
@@ -34,7 +32,8 @@ import { TbMenu2 } from "react-icons/tb";
                     height="19.897991"
                     x="119.82546"
                     y="-1.36631"
-                    transform="matrix(0.8690459,0.49473146,-0.50295052,0.8643152,0,0)"></rect>
+                    transform="matrix(0.8690459,0.49473146,-0.50295052,0.8643152,0,0)"
+                ></rect>
                 <rect
                     style="fill:#64748b;fill-opacity:1;stroke-width:0.264583"
                     id="rect11-7"
@@ -42,7 +41,8 @@ import { TbMenu2 } from "react-icons/tb";
                     height="16.839682"
                     x="3.0330353"
                     y="-114.48527"
-                    transform="matrix(0.70710678,-0.70710678,-0.70710678,-0.70710678,0,0)"></rect>
+                    transform="matrix(0.70710678,-0.70710678,-0.70710678,-0.70710678,0,0)"
+                ></rect>
                 <rect
                     style="fill:#64748b;fill-opacity:1;stroke-width:0.264583"
                     id="rect11-9"
@@ -50,7 +50,8 @@ import { TbMenu2 } from "react-icons/tb";
                     height="16.839682"
                     x="-38.055717"
                     y="115.84782"
-                    transform="matrix(-0.70710678,0.70710678,0.70710678,0.70710678,0,0)"></rect>
+                    transform="matrix(-0.70710678,0.70710678,0.70710678,0.70710678,0,0)"
+                ></rect>
                 <rect
                     style="fill:#64748b;fill-opacity:1;stroke-width:0.264583"
                     id="rect11-7-4"
@@ -59,18 +60,12 @@ import { TbMenu2 } from "react-icons/tb";
                     x="-132.67377"
                     y="21.221533"
                     transform="rotate(-135)"></rect>
-                <text
-                    xml:space="preserve"
-                    transform="matrix(0.26458333,0,0,0.26458333,-2.4257447,-0.44553343)"
+                <path
+                    style="font-weight:800;font-size:53.3333px;font-family:Cantarell;-inkscape-font-specification:'Cantarell Ultra-Bold';white-space:pre;fill:#0f766e"
+                    d="m 326.01323,271.56962 h 9.38666 v -37.01331 h -9.38666 z m 16.96003,0 h 9.22666 v -28.95999 h 4.74666 c 3.46667,0 5.49333,1.65334 5.49333,4.42667 0,2.50666 -1.49333,4.05333 -4.21333,4.05333 h -8.79999 v 7.83999 h 7.51999 c 9.06666,0 15.09333,-5.38666 15.09333,-13.17332 0,-7.14666 -5.12,-11.19999 -13.81333,-11.19999 h -15.25332 z m 20.53332,0 h 11.09333 l -10.02666,-15.83999 h -10.08 z"
                     id="text11"
-                    style="font-size:53.3333px;white-space:pre;shape-inside:url(#rect12);display:inline;fill:#0f766e;fill-opacity:1"
-                    ><tspan x="322.22656" y="271.56962" id="tspan2"
-                        ><tspan
-                            style="font-weight:800;font-family:Cantarell;-inkscape-font-specification:'Cantarell Ultra-Bold'"
-                            id="tspan1">IR</tspan
-                        ></tspan
-                    ></text
-                >
+                    transform="matrix(0.26458333,0,0,0.26458333,-2.4257447,-0.44553343)"
+                    aria-label="IR"></path>
             </g>
         </svg>
     </a>
@@ -94,39 +89,35 @@ import { TbMenu2 } from "react-icons/tb";
         <div class="flex w-full flex-col gap-y-20 px-2 text-center">
             <a id="mobile-link" href="/#" class="py-4">Home</a>
             <a id="mobile-link" href="/#projects" class="py-4">Projects</a>
-            <a id="mobile-link" href="/#technologies" class="py-4">Technologies</a>
+            <a id="mobile-link" href="/#technologies" class="py-4"
+                >Technologies</a
+            >
         </div>
     </div>
-
-    <script>
-        /*
-            Since Astro view transisitons are used, navigating to a new link removes the event listeners.
-            Wrapping the mobile menu logic in the view transitions event resolved this issue.
-        */
-        document.addEventListener("astro:page-load", () => {
-            const menuButton = document.getElementById("menu-button");
-            const mobileMenu = document.getElementById("mobile-menu");
-            const mobileLinks = document.querySelectorAll("#mobile-link");
-            let eventsAdded = 0;
-
-            function toggleMenu() {
-                if (mobileMenu?.classList.contains("hidden")) {
-                    mobileMenu?.classList.remove("hidden");
-                } else {
-                    mobileMenu?.classList.add("hidden");
-                }
-            }
-
-            if (eventsAdded === 0) {
-                console.log("Adding click event");
-                mobileLinks.forEach((link) => {
-                    link.addEventListener("click", toggleMenu);
-                });
-
-                menuButton?.addEventListener("click", toggleMenu);
-            } else {
-                console.log("click event already added");
-            }
-        });
-    </script>
 </nav>
+
+<script>
+    /*
+        Since Astro view transisitons are used, navigating to a new link removes the event listeners.
+        Wrapping the mobile menu logic in the view transitions event resolved this issue.
+    */
+    document.addEventListener("astro:page-load", () => {
+        const menuButton = document.getElementById("menu-button");
+        const mobileMenu = document.getElementById("mobile-menu");
+        const mobileLinks = document.querySelectorAll("#mobile-link");
+
+        function toggleMenu() {
+            if (mobileMenu?.classList.contains("hidden")) {
+                mobileMenu?.classList.remove("hidden");
+            } else {
+                mobileMenu?.classList.add("hidden");
+            }
+        }
+
+        mobileLinks.forEach((link) => {
+            link.addEventListener("click", toggleMenu);
+        });
+
+        menuButton?.addEventListener("click", toggleMenu);
+    });
+</script>
