--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,8 +7,8 @@ import Icon from "./Icon";
 <section id="projects" class="mb-12">
     <h2 class="mb-10 text-center text-4xl font-bold">Projects</h2>
     <div class="mb-10 flex flex-col items-center justify-center">
-        <p class="text-sm">Click to learn more.</p>
-        <Icon title="downArrow" size={20} />
+        <p class="text-sm">Click a project below to learn more.</p>
+        <Icon title="downArrow" size={20} className="fill-black" />
     </div>
     <div class="flex flex-wrap items-center justify-center gap-y-10 sm:gap-x-4">
         {
