refactor: add sticky nav and remove entire site container

--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="mb-12 flex flex-col items-center justify-center">
+<div class="m-auto mb-20 flex max-w-3xl flex-col items-center justify-center">
     <h1
         class="mb-12 text-center text-5xl font-extrabold leading-tight tracking-tighter md:text-6xl"
     >
@@ -10,14 +10,12 @@
             >Ian Reimers</span
         >
     </h1>
-    <div>
-        <p class="text-xl text-gray-600">
-            A web developer striving to produce quality software, assist small
-            bussinesses, and create applications accessible for all to use.
-            <br />
-            <br />
-             Take a look around and check out the projects. If you have any
-            questions, or want to reach out, please don't hesitate!
+    <div class="text-center text-xl text-gray-600">
+        <p class="mb-4">
+            A software developer striving to produce quality software, assist
+            small bussinesses, and create applications accessible for all to
+            use.
         </p>
+        <p>Please take a look around and check out any of the projects!</p>
     </div>
 </div>
