--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -2,9 +2,9 @@
 import Icon from "../components/Icon.jsx";
 ---
 
-<section id="technologies" class="mb-10">
+<section id="technologies" class="mx-auto mb-10 max-w-screen-lg px-4">
     <h2 class="mb-8 text-center text-4xl font-bold">Technologies</h2>
-    <div class="mb-12">
+    <div class="mb-20">
         <h3 class="mb-4 text-center text-xl font-semibold">
             Languages Proficiency
         </h3>
@@ -36,7 +36,7 @@ import Icon from "../components/Icon.jsx";
         </div>
     </div>
 
-    <div class="mb-12">
+    <div class="mb-20">
         <h3 class="mb-4 text-center text-xl font-semibold">
             Frameworks - Libraries - Etc.
         </h3>
