--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,8 @@
 import Icon from "./Icon";
 ---
 
-<footer class="flex items-center justify-center py-12">
-    <h2 class="ms-auto text-sm">&#169; Copyright 2023 Ian Reimers</h2>
+<footer class="mx-auto flex w-[75%] items-center justify-center py-12">
+    <h2 class="ms-auto text-sm">&#169; Copyright 2024 Ian Reimers</h2>
     <div class="ms-auto flex">
         <a href="https://github.com/cretlo" target="_blank"
             ><Icon title="github" size={28} /></a
