--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,100 +1,57 @@
 ---
 import { TbMenu2 } from "react-icons/tb";
+import { TbX } from "react-icons/tb";
+import Logo from "./Logo";
 ---
 
-<nav
-    id="#"
-    class="mx-auto mb-8 flex max-w-2xl items-center justify-between border-b border-b-black px-2 py-5"
->
-    <a href="/" class="z-50">
-        <svg
-            class="w-20"
-            viewBox="0 0 49.548973 23.801309"
-            version="1.1"
-            id="svg1"
-            xmlns="http://www.w3.org/2000/svg"
-        >
-            <title>Ian Reimers logo</title>
-            <defs id="defs1"></defs>
-            <g id="layer1" transform="translate(-71.184714,-55.007321)">
-                <rect
-                    style="fill:#64748b;fill-opacity:1;stroke-width:0.264583"
-                    id="rect11"
-                    width="2.6552467"
-                    height="16.839682"
-                    x="97.651085"
-                    y="-19.858984"
-                    transform="rotate(45)"></rect>
-                <rect
-                    style="fill:#64748b;fill-opacity:1;stroke-width:0.270994"
-                    id="rect11-6"
-                    width="2.3573437"
-                    height="19.897991"
-                    x="119.82546"
-                    y="-1.36631"
-                    transform="matrix(0.8690459,0.49473146,-0.50295052,0.8643152,0,0)"
-                ></rect>
-                <rect
-                    style="fill:#64748b;fill-opacity:1;stroke-width:0.264583"
-                    id="rect11-7"
-                    width="2.6552467"
-                    height="16.839682"
-                    x="3.0330353"
-                    y="-114.48527"
-                    transform="matrix(0.70710678,-0.70710678,-0.70710678,-0.70710678,0,0)"
-                ></rect>
-                <rect
-                    style="fill:#64748b;fill-opacity:1;stroke-width:0.264583"
-                    id="rect11-9"
-                    width="2.6552467"
-                    height="16.839682"
-                    x="-38.055717"
-                    y="115.84782"
-                    transform="matrix(-0.70710678,0.70710678,0.70710678,0.70710678,0,0)"
-                ></rect>
-                <rect
-                    style="fill:#64748b;fill-opacity:1;stroke-width:0.264583"
-                    id="rect11-7-4"
-                    width="2.6552467"
-                    height="16.839682"
-                    x="-132.67377"
-                    y="21.221533"
-                    transform="rotate(-135)"></rect>
-                <path
-                    style="font-weight:800;font-size:53.3333px;font-family:Cantarell;-inkscape-font-specification:'Cantarell Ultra-Bold';white-space:pre;fill:#0f766e"
-                    d="m 326.01323,271.56962 h 9.38666 v -37.01331 h -9.38666 z m 16.96003,0 h 9.22666 v -28.95999 h 4.74666 c 3.46667,0 5.49333,1.65334 5.49333,4.42667 0,2.50666 -1.49333,4.05333 -4.21333,4.05333 h -8.79999 v 7.83999 h 7.51999 c 9.06666,0 15.09333,-5.38666 15.09333,-13.17332 0,-7.14666 -5.12,-11.19999 -13.81333,-11.19999 h -15.25332 z m 20.53332,0 h 11.09333 l -10.02666,-15.83999 h -10.08 z"
-                    id="text11"
-                    transform="matrix(0.26458333,0,0,0.26458333,-2.4257447,-0.44553343)"
-                    aria-label="IR"></path>
-            </g>
-        </svg>
-    </a>
+<header class="sticky top-0 z-50 mb-8 border-b border-b-black bg-white">
+    <nav id="#" class="mx-auto flex w-[92%] items-center justify-between py-5">
+        <a href="/" class="z-50">
+            <Logo />
+        </a>
 
-    <div class="hidden gap-12 sm:flex">
-        <a href="/#">Home</a>
-        <a href="/#projects">Projects</a>
-        <a href="/#technologies">Technologies</a>
-    </div>
-
-    <!-- Mobile menu button -->
-    <button type="button" class="z-50 sm:hidden" id="menu-button">
-        <TbMenu2 size={40} title="Mobile menu button" />
-    </button>
-
-    <!-- Mobile menu -->
-    <div
-        class="fixed left-0 top-0 z-20 flex hidden h-screen w-screen items-center justify-center bg-white sm:hidden"
-        id="mobile-menu"
-    >
-        <div class="flex w-full flex-col gap-y-20 px-2 text-center">
-            <a id="mobile-link" href="/#" class="py-4">Home</a>
-            <a id="mobile-link" href="/#projects" class="py-4">Projects</a>
-            <a id="mobile-link" href="/#technologies" class="py-4"
-                >Technologies</a
-            >
+        <div class="">
+            <ul class="hidden gap-12 sm:flex">
+                <li>
+                    <a class="hover:text-gray-600" href="/#home">Home</a>
+                </li>
+                <li>
+                    <a class="hover:text-gray-600" href="/#projects">Projects</a
+                    >
+                </li>
+                <li>
+                    <a class="hover:text-gray-600" href="/#technologies"
+                        >Technologies</a
+                    >
+                </li>
+            </ul>
         </div>
-    </div>
-</nav>
+
+        <!-- Mobile menu button -->
+        <button type="button" class="z-50 sm:hidden" id="menu-button">
+            <div id="menu-icon-open">
+                <TbMenu2 size={40} title="Mobile menu open icon" />
+            </div>
+            <div class="hidden" id="menu-icon-close">
+                <TbX size={40} title="Mobile menu close icon" />
+            </div>
+        </button>
+
+        <!-- Mobile menu -->
+        <div
+            class="fixed left-0 top-0 z-20 flex hidden h-screen w-screen items-center justify-center bg-white sm:hidden"
+            id="mobile-menu"
+        >
+            <div class="flex w-full flex-col gap-y-20 px-2 text-center">
+                <a id="mobile-link" href="/#" class="py-4">Home</a>
+                <a id="mobile-link" href="/#projects" class="py-4">Projects</a>
+                <a id="mobile-link" href="/#technologies" class="py-4"
+                    >Technologies</a
+                >
+            </div>
+        </div>
+    </nav>
+</header>
 
 <script>
     /*
@@ -103,10 +60,21 @@ import { TbMenu2 } from "react-icons/tb";
     */
     document.addEventListener("astro:page-load", () => {
         const menuButton = document.getElementById("menu-button");
+        const menuIconOpen = document.getElementById("menu-icon-open");
+        const menuIconClose = document.getElementById("menu-icon-close");
         const mobileMenu = document.getElementById("mobile-menu");
         const mobileLinks = document.querySelectorAll("#mobile-link");
 
         function toggleMenu() {
+            menuIconOpen &&
+                (menuIconOpen.className = menuIconOpen.className
+                    ? ""
+                    : "hidden");
+            menuIconClose &&
+                (menuIconClose.className = menuIconClose.className
+                    ? ""
+                    : "hidden");
+
             if (mobileMenu?.classList.contains("hidden")) {
                 mobileMenu?.classList.remove("hidden");
             } else {
