--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 const { title, desc, imgData, link } = Astro.props;
 ---
 
-<a href={link} class="block max-w-xs">
+<a href={link} class="block basis-10/12 md:basis-5/12 xl:basis-1/3">
     <div
         class="relative overflow-hidden border border-black transition-all ease-in hover:shadow-lg hover:shadow-slate-500 [&>p]:hover:rounded-br-2xl"
     >
@@ -11,6 +11,8 @@ const { title, desc, imgData, link } = Astro.props;
             src={imgData}
             alt={desc}
             transition:name="image"
+            densities={[1.5, 2]}
+            width={imgData.width / 2}
             class="transition-all"
         />
         <p
