--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
     <head>
         <meta charset="UTF-8" />
         <meta name="description" content="Astro description" />
@@ -20,9 +20,9 @@ const { title } = Astro.props;
         <title>{title}</title>
         <ViewTransitions />
     </head>
-    <body>
+    <body id="home">
         <Nav />
-        <main class="mx-auto max-w-2xl px-2 md:px-0">
+        <main class="mx-auto px-2 md:px-0">
             <slot />
         </main>
     </body>
