--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -13,7 +13,7 @@
     <div class="text-center text-xl text-gray-600">
         <p class="mb-4">
             A software developer striving to produce quality software, assist
-            small bussinesses, and create applications accessible for all to
+            small businesses, and create applications accessible for all to
             use.
         </p>
         <p>Please take a look around and check out any of the projects!</p>
