feat: add pomodoro tracker project with spring boot icon

--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -63,6 +63,7 @@ import Icon from "../components/Icon.jsx";
                 <!-- nodejs, express, postgres, redis, drizzle, firebase -->
                 <Icon title="nodejs" />
                 <Icon title="express" />
+                <Icon title="springboot" />
                 <Icon title="postgres" />
                 <Icon title="redis" />
                 <Icon title="firebase" />
