feat: add certificates section with CompTIA certificate logos

--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -1,5 +1,5 @@
 ---
-import Icon from "../components/Icon.jsx";
+import Icon from "../components/Icon.tsx";
 ---
 
 <section id="technologies" class="mx-auto mb-10 max-w-screen-lg px-4">
@@ -41,7 +41,7 @@ import Icon from "../components/Icon.jsx";
             Frameworks - Libraries - Etc.
         </h3>
         <div class="">
-            <h4 class="mb-4 border-b border-b-black">DevOps</h4>
+            <h4 class="mb-4 border-b border-b-black">Tools</h4>
             <div class="mb-6 flex flex-wrap gap-10">
                 <!-- nginx, docker -->
                 <Icon title="git" />
