--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,13 @@ import Landing from "../components/Landing.astro";
 import Projects from "../components/Projects.astro";
 import Technologies from "../components/Technologies.astro";
 import Footer from "../components/Footer.astro";
+import Certificates from "../components/Certificates.astro";
 ---
 
 <Layout title="Welcome to Ian Reimers Portfolio">
     <Landing />
     <Projects />
+    <Certificates />
     <Technologies />
     <Footer />
 </Layout>
