--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -1,5 +1,5 @@
 ---
-import Icon from "../components/Icon.tsx";
+import Icon from "../components/Icon.jsx";
 ---
 
 <section id="technologies" class="mx-auto mb-10 max-w-screen-lg px-4">
