feat: add certificate link to navbar

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -20,6 +20,11 @@ import Logo from "./Logo";
                     >
                 </li>
                 <li>
+                    <a class="hover:text-gray-600" href="/#certificates"
+                        >Certificates</a
+                    >
+                </li>
+                <li>
                     <a class="hover:text-gray-600" href="/#technologies"
                         >Technologies</a
                     >
@@ -45,6 +50,9 @@ import Logo from "./Logo";
             <div class="flex w-full flex-col gap-y-20 px-2 text-center">
                 <a id="mobile-link" href="/#" class="py-4">Home</a>
                 <a id="mobile-link" href="/#projects" class="py-4">Projects</a>
+                <a id="mobile-link" href="/#certificates" class="py-4"
+                    >Certificates</a
+                >
                 <a id="mobile-link" href="/#technologies" class="py-4"
                     >Technologies</a
                 >
