--- a/src/components/Certificates.astro
+++ b/src/components/Certificates.astro
@@ -2,7 +2,7 @@
 import Icon from "../components/Icon.jsx";
 ---
 
-<section id="technologies" class="mx-auto mb-10 max-w-screen-lg px-4">
+<section id="certificates" class="mx-auto mb-10 max-w-screen-lg px-4">
     <h2 class="mb-8 text-center text-4xl font-bold">Certificates</h2>
     <div class="mb-20">
         <div class="">
