--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import Icon from "./Icon";
 <footer class="mx-auto flex w-[75%] items-center justify-center py-12">
     <h2 class="ms-auto text-sm">&#169; Copyright 2024 Ian Reimers</h2>
     <div class="ms-auto flex">
-        <a href="https://github.com/cretlo" target="_blank"
+        <a href="https://github.com/ianreimers" target="_blank"
             ><Icon title="github" size={28} /></a
         >
     </div>
