--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -87,7 +87,7 @@ import Icon from "../components/Icon.jsx";
         </div>
         <div>
             <a
-                href="https://github.com/cretlo/.dotfiles"
+                href="https://github.com/ianreimers/.dotfiles"
                 target="_blank"
                 class="inline-block border border-black px-4 py-2 transition ease-in hover:bg-teal-700 hover:text-white"
                 >Checkout The Dotfiles</a
